--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -133,8 +133,8 @@
 
 @media (max-width: 768px) {
     .contact-content {
-        margin-bottom: 80px;
         margin-left: 0;
+   
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -142,6 +142,7 @@
 
     .contact-form-container {
         width: 90%;
+        margin-top: -130px;
         margin-left: 0;
         padding: 20px;
     }
@@ -168,7 +169,9 @@
         padding: 10px 15px;
     }
 
-    .social-links-container {
+    .social-links-container 
+    {
+        margin-bottom: -60px;
         margin-right: 0;
     }
 }
@@ -209,6 +212,7 @@
 
     .social-links {
         flex-direction: row;
+       
         gap: 40px;
         justify-content: center;
     }
