--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,26 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow: hidden; 
 }
 
 html, body {
-  overflow-x: hidden; 
+  overflow-x: hidden;  
+  overflow-y: hidden; 
   max-width: 100%;
+  height: 100%;
+}
+::-webkit-scrollbar {
+  display: none; 
 }
 
+::-webkit-scrollbar-button {
+  display: none; 
+}
 
+html {
+  scrollbar-width: none; 
+}
 
 @keyframes zoomIn {
   0% {
@@ -21,15 +33,7 @@ html, body {
     transform: scale(1);
   }
 }
+
 .code-font {
   font-family: 'Fira Code', monospace;
-}
-/* Heq scrollbars horizontale dhe vertikale */
-::-webkit-scrollbar {
-  display: none;  /* Heq të gjitha scrollbars */
-}
-
-/* Heq shigjetat e scroll-it */
-::-webkit-scrollbar-button {
-  display: none;
 }
