--- a/src/App.css
+++ b/src/App.css
@@ -2,24 +2,29 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow: hidden; 
 }
 
 html, body {
-  overflow-x: hidden;  
+  overflow-x: hidden;
   max-width: 100%;
   height: 100%;
 }
+
 ::-webkit-scrollbar {
-  display: none; 
+  display: none;
 }
 
 ::-webkit-scrollbar-button {
-  display: none; 
+  display: none;
 }
 
 html {
-  scrollbar-width: none; 
+  scrollbar-width: none;
+}
+
+.scrollable {
+  overflow-y: auto;
+  max-height: 500px;
 }
 
 @keyframes zoomIn {
@@ -33,6 +38,3 @@ html {
   }
 }
 
-.code-font {
-  font-family: 'Fira Code', monospace;
-}
